<resources>
    <string name="app_name">DrawerLayoutExample</string>
    <string name="category1">Category1</string>
    <string name="icon1">icon1</string>
    <string name="icon2">icon2</string>
    <string name="icon3">icon3</string>
    <string name="category2">Category2</string>
    <string name="icon4">icon4</string>
    <string name="icon5">icon5</string>
    <string name="icon6">icon6</string>
    <string name="photo">photo</string>
    <string name="log_in">Log in</string>
</resources>